tests/errors/int_to_leds.td
component int_to_leds
{
  requires interface counter_output input;
}
